@@ -49,7 +49,8 @@
 #define CARTRIDGE_ATMAX_128      41
 #define CARTRIDGE_ATMAX_1024     42
 #define CARTRIDGE_SDX_128        43
-#define CARTRIDGE_LAST_SUPPORTED 43
+#define CARTRIDGE_OSS_8          44
+#define CARTRIDGE_LAST_SUPPORTED 44
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
 extern int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1];
